removed my name from style sheet

--- a/tex/style_sheet/style_sheet.tex
+++ b/tex/style_sheet/style_sheet.tex
@@ -12,9 +12,9 @@
 \renewcommand\labelitemi{}
 \renewcommand\labelitemii{}
 \pagestyle{fancy}
-\lhead{Style Guide}
+\lhead{Nuclear Engineering Style Guide}
 \chead{}
-\rhead{Joshua Rehak}
+\rhead{}
 \lfoot{}
 \cfoot{\thepage}
 \rfoot{{\small{}Based on AIP Style Guide (4th Edition)}}
