--- a/tex/bib/bib.bib
+++ b/tex/bib/bib.bib
@@ -153,3 +153,35 @@ author = "Derek Gaston and Chris Newman and Glen Hansen and Damien Lebrun-Grandi
   OPTannote = 	 {}
 }
 
+%% ===== FINITE ELEMENT METHODS ======================================
+
+@Article{Ragusa_2010,
+  author       = {Ragusa, Jean C. and Wang, Yaqi},
+  title	       = {A two-mesh adaptive mesh refinement technique for
+                  <mml:math altimg=“si4.gif” display=“inline”
+                  overflow=“scroll”
+                  xmlns:xocs=“http://www.elsevier.com/xml/xocs/dtd”
+                  xmlns:xs=“http://www.w3.org/2001/XMLSchema”
+                  xmlns:xsi=“http://www.w3.org/2001/XMLSchema-instance”
+                  xmlns=“http://www.elsevier.com/xml/ja/dtd”
+                  xmlns:ja=“http://www.elsevier.com/xml/ja/dtd”
+                  xmlns:mml=“http://www.w3.org/1998/Math/MathML”
+                  xmlns:tb=“http://www.elsevier.com/xml/common/table/dtd”
+                  xmlns:sb=“http://www.elsevier.com/xml/common/struct-bib/dtd”
+                  xmlns:ce=“http://www.elsevier.com/xml/common/dtd”
+                  xmlns:xlink=“http://www.w3.org/1999/xlink”
+                  xmlns:cals=“http://www.elsevier.com/xml/common/cals/dtd”><mml:msub><mml:mrow><mml:mi>S</mml:mi></mml:mrow><mml:mrow><mml:mi>N</mml:mi></mml:mrow></mml:msub></mml:math>
+                  neutral-particle transport using a higher-order
+                  DGFEM},
+  year	       = 2010,
+  volume       = 233,
+  number       = 12,
+  month	       = {Apr},
+  pages	       = {3178–3188},
+  issn	       = {0377-0427},
+  doi	       = {10.1016/j.cam.2009.12.020},
+  url	       = {http://dx.doi.org/10.1016/j.cam.2009.12.020},
+  journal      = {Journal of Computational and Applied Mathematics},
+  publisher    = {Elsevier BV}
+}
+
