--- a/tex/sty/basic.sty
+++ b/tex/sty/basic.sty
@@ -9,6 +9,8 @@
 \usepackage{mathtools} % Adds Aboxed and rcases
 \usepackage{amssymb}
 \usepackage{braket} %Can do bra-ket notation with \braket{}
+\usepackage{bm} % Bold math symbols
+\usepackage{tabu}
 
 % Algorthims
 \usepackage{algorithm}
